--- a/src/static/styles/components/_browse_cards.scss
+++ b/src/static/styles/components/_browse_cards.scss
@@ -1,4 +1,5 @@
 .browse-cards{
+    min-width: 360px;
     object-fit: cover;
 }
 
@@ -12,10 +13,12 @@
         font-size: medium;
         font-weight: 600;
     }
+
 }
 
 .img-wrapper{
     position: relative;
+    background-color: white;
     .item-name{
         position: absolute;
         top: 50%;
